# court-practice

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  Свежая_практика_ВС_РФ_после_21_03_2026.md
.claude/hooks/: session-start.sh
app/: __init__.py  auth.py  config.py  logging_setup.py  server.py
app/oauth/: __init__.py  authorization.py  discovery.py  jwt_utils.py  registration.py  store.py  token.py
app/search/: bm25.py  date_utils.py  engine.py  fusion.py  lemmatizer.py  semantic.py
app/storage/: index_loader.py  redis_cache.py
app/tools/: __init__.py  _common.py  find_similar.py  get_case_details.py  list_tags.py  search_practice.py  stats.py
court-practice v.2/scripts/: search.py
data/: new_practice_after_2026_03_21.json
reference/data/: embeddings_meta.json  index_meta.json
reference/scripts/: embed.py  index.py
scripts/: build_embeddings.py  build_index.py  healthcheck.py  migrate_add_case_ids.py  migrate_fix_dates.py  parse_markdown_practice.py  update_index.py
tests/: conftest.py  test_auth.py  test_fusion.py  test_oauth.py  test_search.py  test_search_engine.py  test_tools.py
